--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "",
+  "name": "alurainstaback",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -24,12 +24,13 @@
   },
   "contributors": [],
   "scripts": {
-    "dev": "node --watch --env-file=.env server.js",
-    "start": "node --env-file=.env server.js",
+    "start": "node server.js",
+    "dev": "node --no-deprecation --env-file=.env server.js",
     "test": ""
   },
   "dependencies": {
-    "express": "^4.21.1",
-    "mongodb": "^6.10.0"
+    "express": "^4.18.2",
+    "mongodb": "^6.2.0",
+    "mongoose": "^7.6.3"
   }
 }
